--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+    <a class="navbar-brand" href="#"><img src="../img/logo.png"></a>
 
 
   <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
