--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 	<div class="container ">
 		<div class="row pb-1"> 
 		<!-- Footer logo -->
-		<div class="col-lg-3 col-md-12"><img src="./img/logo.png"></div>
+		<div class="col-lg-3 col-md-12"><img src="../img/logo.png"></div>
 
 		<!-- footer links -->
 		<div class="col-lg-6 col-md-12">
