--- a/views/admin/admin-signup.ejs
+++ b/views/admin/admin-signup.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs') %>  
+    <%- include('../partials/head.ejs') %>  
 <body>
-    <%- include('./partials/nav.ejs') %>   
+    <%- include('../partials/nav.ejs') %>   
 
     <div class="wraper">
         <h1>Login form</h1>
         <p></p>
-        <form> 
+        <form action="" method=""> 
             
                  <div class="form-row">
                   <div class="form-group col-md-6">
@@ -59,6 +59,6 @@
   
 
 
-    <%- include('./partials/footer.ejs') %>  
+    <%- include('../partials/footer.ejs') %>  
 </body>
 </html>
