--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs') %>  
+    <%- include('../partials/head.ejs') %>  
 <body>
-    <%- include('./partials/nav.ejs') %>   
+    <%- include('../partials/admin-nav.ejs') %>   
 
     <div class="wraper">
         <h1>Login form</h1>
         <p></p>
-        <form>
+        <form action="/admin/login/auth" method="get">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="emai">
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
             </div>
            
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" name="login">Submit</button>
           </form>
     </div>
   
 
 
     <!-- footer -->
-    <%- include('./partials/footer.ejs') %>  
+    <%- include('../partials/footer.ejs') %>  
 </body>
 </html>
