--- a/views/partials/admin-nav.ejs
+++ b/views/partials/admin-nav.ejs
@@ -9,19 +9,13 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
     
                   <ul class="navbar-nav">
-                      <li class="nav-item">
-                      <a class="nav-link" href="#">Travel Tips</a>
-                    </li>
+
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Get Inspired</a>
+                    <a class="nav-link" href="#">logs</a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Cheap Airfare</a>
-                  </li>
-
-                  <li class="nav-item">
-                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link" href="/login">logout</a>
                   </li>
               </ul>
     </div>
