--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -7,7 +7,7 @@
     <div class="wraper">
         <h1>Login form</h1>
         <p></p>
-        <form action="/admin/login/auth" method="get">
+        <form action="/admin/login" method="post">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email">
