--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -7,6 +7,7 @@
 
 
 <div class="container" style="margin:300px  auto ;">
+  <h1 style="text-decoration: underline; margin-bottom: 20px;">Signup </h1>
     <form action="/signup" method="post">
         <div class="form-row">
             <div class="form-group col-md-6">
@@ -60,7 +61,7 @@
         <div class="form-group">
            <p href="#"> Dont have an account? <a href="/login">Login </a></p> 
         </div>
-        <button type="submit" class="btn btn-primary" name="signup" >Sign in </button>
+        <button type="submit" class="btn btn-primary" name="signup" >Sign Up </button>
       </form>
     
 </div>
