--- a/views/user/single.ejs
+++ b/views/user/single.ejs
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<%- include('./partials/head.ejs') %> 
+<%- include('../partials/head.ejs') %> 
   <body>
     
 
@@ -8,7 +8,7 @@
 <div class="container-fluid" id="header">
 	
 
-<%- include('./partials/nav.ejs') %> 
+<%- include('../partials/nav.ejs') %> 
 		<!-- Hero Section -->
 	  <div class="container" id="hero">
 	  	<div class="row justify-content-end">
@@ -121,13 +121,7 @@
 </div>
 
 <!-- Footer section  -->
-<%- include('./partials/footer.ejs') %> 
+<%- include('../partials/footer.ejs') %> 
 
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
