--- a/views/user/main.ejs
+++ b/views/user/main.ejs
@@ -6,7 +6,7 @@
 	<%- include('../partials/nav.ejs') %>   
 
 <div class="container-fluid" id="header">
-
+	<h1>logged in user</h1>
 	  <!-- hero section -->
 	  <div class="container" id="hero">
 	  	<div class="row justify-content-end">
