--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -7,7 +7,7 @@
     <div class="wraper">
         <h1>Login form</h1>
         <p></p>
-        <form action="/admin/login" method="post">
+        <form action="/login" method="post">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email">
@@ -17,7 +17,9 @@
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
             </div>
-           
+            <div class="form-group">
+              <p href="#"> Dont have an account? <a href="/signup">Sign Up </a></p> 
+           </div> 
             <button type="submit" class="btn btn-primary" name="login">Submit</button>
           </form>
     </div>
