--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="form-group">
-           <p href="#"> Dont have an account? <a href="/login">Login </a></p> 
+           <p href="#">Have an account? <a href="/login">Login </a></p> 
         </div>
         <button type="submit" class="btn btn-primary" name="signup" >Sign Up </button>
       </form>
