--- a/views/author/author-index.ejs
+++ b/views/author/author-index.ejs
@@ -1,1 +1,24 @@
-<h1>author section</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <%- include('../partials/head.ejs') %>  
+
+<body>
+    
+    <%- include('../partials/author.ejs') %>  
+
+    <div class="container" style="margin-top: 70px; margin-bottom: 100px;">
+        <h1>Welcome back: <author> hude</author></h1>
+
+        <div class="author-options">
+            <button type="button" class="btn btn-dark"><a href="/public">Create Public Blog</a></button>
+            <button type="button" class="btn btn-dark"><a href="/member">Create Members Blog</a></button>
+            <button type="button" class="btn btn-dark"><a href="/private">Create Private Journal</a></button>
+            <button type="button" class="btn btn-dark"><a href="/view">View Blogs</a></button>
+        </div>
+    </div>
+
+
+
+    <%- include('../partials/footer.ejs') %>  
+</body>
+</html>
