--- a/views/author/author-index.ejs
+++ b/views/author/author-index.ejs
@@ -10,10 +10,10 @@
         <h1>Welcome back: <author> hude</author></h1>
 
         <div class="author-options">
-            <button type="button" class="btn btn-dark"><a href="/public">Create Public Blog</a></button>
-            <button type="button" class="btn btn-dark"><a href="/member">Create Members Blog</a></button>
-            <button type="button" class="btn btn-dark"><a href="/private">Create Private Journal</a></button>
-            <button type="button" class="btn btn-dark"><a href="/view">View Blogs</a></button>
+            <button type="button" class="btn btn-dark"><a href="author/public">Create Public Blog</a></button>
+            <button type="button" class="btn btn-dark"><a href="author/member">Create Members Blog</a></button>
+            <button type="button" class="btn btn-dark"><a href="author/private">Create Private Journal</a></button>
+            <button type="button" class="btn btn-dark"><a href="author/view">View Blogs</a></button>
         </div>
     </div>
 
