--- a/views/author/create.ejs
+++ b/views/author/create.ejs
@@ -34,7 +34,7 @@
                               <div class="d-flex justify-content-center">
                                   <div class="btn btn-mdb-color btn-rounded float-left">
                                   <span>Choose Image</span>
-                                  <input type="file" name="file" name="media">
+                                  <input type="file"  name="image">
                                   <!-- <input type="file" name="file" name="media"> -->
                                   </div>
                                   
@@ -44,7 +44,7 @@
                                 <div class="d-flex justify-content-center">
                                     <div class="btn btn-mdb-color btn-rounded float-left">
                                     <span>Additional multimedia</span>
-                                    <input type="file" name="file" name="media">
+                                    <input type="file"  name="multimedia">
                                     <!-- <input type="file" name="file" name="media"> -->
                                     </div>
                                     
