--- a/views/user/main.ejs
+++ b/views/user/main.ejs
@@ -3,10 +3,12 @@
 <%- include('../partials/head.ejs') %> 
   <body>
     
-	<%- include('../partials/nav.ejs') %>   
+	<%- include('../partials/member.ejs') %>   
+
+	<% var contentLength = Math.round(memberBlogs[0]['content'].length /4); var shortContent = memberBlogs[0]['content'].slice(0,77)  %>
 
 <div class="container-fluid" id="header">
-	<h1>logged in user</h1>
+
 	  <!-- hero section -->
 	  <div class="container" id="hero">
 	  	<div class="row justify-content-end">
@@ -20,8 +22,8 @@
 
 	  		<div class="col-lg-9">
 	  			<div class="hero-title">
-	  				<a href="./single">
-	  				<h1>To theory equation, more have the or to was the</h1>
+					<a  href="./single/<%= memberBlogs[0]['blog_id'] %>">
+					<h1> <%- memberBlogs[0]['heading'] %></h1>
 	  				</a>
 	  			</div>
 
@@ -29,12 +31,11 @@
 
 	  		<div class="col-lg-6">
 	  			<div class="hero-meta">
-	  				<p>Herself of that similar live good up which is are to for French endeavours, screen.</p>
+	  				<p> <%- shortContent%> </p>
 	  				<div class="author">
 	  					<div class="author-img"><img src="./img/author-img.png"></div>
 	  					<div class="author-meta">
-	  					<span class="author-name">Celeste Connell</span>
-	  					<span class="author-tag">Travel Blogger</span>
+	  					<span class="author-name" style="margin-top: 16px;">Celeste Connell</span> <!-- fetch user name from user id -->
 	  					</div>	
 	  				</div>
 	  			</div>
@@ -45,171 +46,34 @@
 <!-- hero ends -->
 
 <!-- Article Grid -->
-
 <div class="container mt-2 mb-2 pt-5 pb-5" id="article-grid">
 	<div class="row justify-content-center">
 
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/1.jpeg">
-			</div>
 
-				<div class="article-meta text-left">
-					<h2>I tighten my siddur, which they fail to someone else's</h2>
-					<p>Most of culture that the sensitivity of the condition of puppy love, my lemons.</p>
-				</div>
-			</div>
-			</a>
-		</div>
-	
-		<div class="col-xl-6 col-lg-12  text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/2.jpeg">
-			</div>
+<% try { %>
+<%   for(var i = 1; i< memberBlogs.length; i++) {%>
 
-				<div class="article-meta  text-left">
-					<h2>The details of justice to live in which converge into the accomplishment</h2>
-					<p>Began it will a more first was something return. Were ...</p>
-				</div>
-			</div>
-			</a>
-		</div>
-	
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/3.jpeg">
-			</div>
-
-				<div class="article-meta  text-left">
-					<h2>Time text to so legs screen step experiments term a</h2>
-					<p>The due be to warp room he have place a problem offer, of just of screen there sitting.</p>
-				</div>
-			</div>
-			</a>
-		</div>
-	
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/4.jpeg">
-			</div>
-
-				<div class="article-meta text-left">
-					<h2>Yet accuse however my people are</h2>
-					<p>The for probably of totally parameters gloomy probably walls hearing.</p>
-				</div>
-			</div>
-			</a>
-		</div>
-	
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/5.jpeg">
-			</div>
-
-				<div class="article-meta text-left">
-					<h2>They gain, the last were past material.</h2>
-					<p>Were hundred arranged he statement the your especially his here.</p>
-				</div>
-			</div>
-			</a>
-		</div>
-	
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/6.jpeg">
-			</div>
-
-				<div class="article-meta text-left">
-					<h2>Where instruments, cut out done far the for they'd seen</h2>
-					<p>And his we not quickly tin, but distance, the best of client would of concise plan past.</p>
-				</div>
-			</div>
-			</a>
-		</div>
-		
-
-	
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/7.jpeg">
-			</div>
-
-				<div class="article-meta text-left">
-					<h2>Generally, without gain, means, to researches</h2>
-					<p>The nor failing. First and friends the state fees...</p>
-				</div>
-			</div>
-			</a>
-		</div>
-		
-
-	
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/8.jpeg">
-			</div>
-
-				<div class="article-meta text-left">
-					<h2>Mind that she upper that caches of psychological be</h2>
-					<p>A through were the the their a of for human officer sort to to anchors viewings of all of origin.</p>
-				</div>
-			</div>
-			</a>
-		</div>
-		
-
-	
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/9.jpeg">
-			</div>
-
-				<div class="article-meta text-left">
-					<h2>Heard designer a help reason to get psychological</h2>
-					<p>May and a of to instruments, the could river the spineless.</p>
-				</div>
-			</div>
-			</a>
-		</div>
-		
-
-	
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/10.jpeg">
-			</div>
-
-				<div class="article-meta text-left">
-					<h2>Morning, it mouth. Harder of with from and narrow</h2>
-					<p>Explain the in fly tone research volunteers and both only the drew cleaning to each language trial.</p>
-				</div>
-			</div>
-			</a>
+	<div class="col-xl-6 col-lg-12 text-center">
+		<a href="./single/<%= memberBlogs[i]['blog_id'] %>">
+		<div class="article-card">
+		<div class="article-img">
+			<img src="./img/1.jpeg">
 		</div>
 
-	</div> <!-- Article Grid Row Ends -->
-</div> <!-- Article Grid Container Ends -->
+			<div class="article-meta text-left">
+				<h2> <%= memberBlogs[i]['heading'] %></h2>
+				<p><%= memberBlogs[i]['content'].slice(0,70) %>....</p>
+			</div>
+		</div>
+		</a>
+	</div>
+<% }; %>
+<% } catch{ %>
+	<div class="alert alert-warning" role="alert">
+		 No member blogs available at the moment.
+	  </div>
 
+<% } %>
 <!-- More articles button -->
 
 <div class="container text-center pb-3 mb-5">
