--- a/views/user/single.ejs
+++ b/views/user/single.ejs
@@ -15,13 +15,13 @@
 	  		<div class="col-lg-6 hero-img-container">
 	  			<div class="hero-img">
 	  				<!-- hero img -->
-	  				<img src="./img/hero-img-2.jpeg">
+	  				<img src="../img/hero-img-2.jpeg">
 	  			</div>
 	  		</div>	  		
 
 	  		<div class="col-lg-9">
 	  			<div class="hero-title">
-	  				<h1>I tighten my siddur, fail to someone else's</h1>
+	  				<h1> <%= singleBlogItem[0]['heading'] %></h1>
 	  			</div>
 
 	  		</div>
@@ -29,20 +29,14 @@
 	  		<div class="col-lg-6">
 	  			<div class="hero-meta">
 	  				<div class="author">
-	  					<div class="author-img"><img src="./img/author-img.png"></div>
+	  					<div class="author-img"><img src="../img/author-img.png"></div>
 	  					<div class="author-meta">
 	  					<span class="author-name">Celeste Connell</span>
 	  					<span class="author-tag">Travel Blogger</span>
 	  					</div>	
 	  				</div>
-	  				<span class="date mt-2">25th January, 2019</span>
-	  				<div class="tags mt-2">
-							<a href=""><span class="badge badge-pill p-2 badge-light">#Travel</span></a>
-							<a href="">
-							<span class="badge badge-pill p-2 badge-light">#Flight</span></a>
-							<a href="">
-							<span class="badge badge-pill p-2 badge-light">#Vlogger</span></a>
-	  				</div>
+	  				<span class="date mt-1"><%= singleBlogItem[0]['date'] %></span>
+	  			
 	  			</div>
 	  		</div>
 	  	</div>
@@ -62,17 +56,7 @@
 
 		<!-- the content -->
 		<div class="col-xl-7 col-lg-10 col-md-12">
-			<p class="lead">To competitive brief so it to days, of who have covered and relieved its together lack to agency; Prudently, too. For by is seemed was would parents are or presence no there to internet that the bale to employed have for subject primarily feel origin the all doesn’t discipline get.</p>
-
-			<p>A laminated is values, the anyone is to found was. Anger beginnings, should horrible of claim twists far were in lots taking designers, something language systems just more endeavours, we to the answering so and key she a bit hall particular saw and down that a in particularly you future almost and might how and are the on would pointing our think a able self-interest to quarter her. </p>
-
-			<p>Strenuous an the was leaders, the towards gone who need both from of taken first copy. From his notice big certainly line universal I by of to one up on back stitching.</p>
-
-			<h3>Our another and princesses by the text</h3>
-
-			<p>Mouth. Our another and princesses by the text, entered commissaries. Discipline set five they understand they’re once without. The large they nor of to that incurred his assets college any the to evening distressed good sitting how pattern.</p>
-
-			<p>And us, review, or that bedding a chief own, commissaries. Coast onto to for of between studies hired while it work ages, period, explains the first thoughts of free the up, I more performed them. Might should film text past with from should day are room. Interaction last I into mostly want do present problems of been low myself. Wellfeigned part the.</p>
+			<p class="lead"> <%= singleBlogItem[0]['content'] %> </p>
 		</div>
 
 		<div class="col-lg-10 mt-3">
@@ -84,7 +68,7 @@
 
 <!-- Related Article Grid -->
 
-<div class="container mt-3 mb-5" id="article-grid">
+<!-- <div class="container mt-3 mb-5" id="article-grid">
 	<div class="row">
 
 		<div class="col-xl-6 col-lg-12 text-center">
@@ -118,7 +102,7 @@
 		</div>
 
 	</div>
-</div>
+</div> -->
 
 <!-- Footer section  -->
 <%- include('../partials/footer.ejs') %> 
