--- a/views/author/create.ejs
+++ b/views/author/create.ejs
@@ -7,7 +7,7 @@
     <%- include('../partials/author.ejs') %>  
 
     <div class="container" style="margin-top: 70px; margin-bottom: 130px;">
-        <h1 style="text-align: center;">Welcome back: <author> hude</author></h1>
+        <h1 style="text-align: center;">Welcome back: <%- username %> </h1>
 
         <div class="create-form">
             <h2>Create  blog</h2>
