--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../style/styles.css">
 
     <title>Roundy - A Minimal Bootstrap Blogging Tempate</title>
+    <script src=""></script>
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   </head>
