--- a/views/author/blogview.ejs
+++ b/views/author/blogview.ejs
@@ -7,12 +7,12 @@
     <%- include('../partials/author.ejs') %>  
 
     <div class="container " id="blog-view">
-        <h1>Author's blogs</h1>
+        <h1><%- username %> 's blogs</h1>
         <% try { %>
             <% var contentLength = Math.round(blogs[0]['content'].length /4); var shortContent = blogs[0]['content'].slice(0,77)  %>
             <%   for(var i = 0; i< blogs.length; i++) {%>
             
-                <div class="card">
+                <div class="card" style="margin-top: 100px; margin-bottom: 100px;">
                     <h5 class="card-header"><%= blogs[i]['view_option'] %></h5>
                     <div class="card-body">
                     <h5 class="card-title"><%= blogs[i]['heading'] %></h5>
