--- a/views/partials/admin-nav.ejs
+++ b/views/partials/admin-nav.ejs
@@ -15,7 +15,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="/login">logout</a>
+                    <a class="nav-link" href="/admin/logout">logout</a>
                   </li>
               </ul>
     </div>
