--- a/views/partials/author.ejs
+++ b/views/partials/author.ejs
@@ -3,32 +3,35 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="/"><img src="../img/logo.png"></a>
+    <a class="navbar-brand" href="/author"><img src="../img/logo.png"></a>
 
 
   <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
     
                   <ul class="navbar-nav">
                       <li class="nav-item">
-                      <a class="nav-link" href="#">Visit blog</a>
+                      <a class="nav-link" href="/main">Visit blog</a>
                     </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Create blog</a>
+                    <a class="nav-link" href="/author/public"> Public Blog</a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Private journal</a>
+                    <a class="nav-link" href="/author/member"> Member Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/author/private">Private journal</a>
                   </li>
 
                   <li class="nav-item" style="margin-left:40px">
                     <div class="btn-group">
                       <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        hude
+                       <%- username %> 
                       </button>
                       <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">Profile</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Logout</a>
+                        <a class="dropdown-item" href="/author/logout">Logout</a>
                       </div>
                     </div>
                   </li>
