--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="container-fluid mt-1 p-4">
+<footer id="footer" class="container-fluid mt-1 p-4">
 	<div class="container ">
 		<div class="row pb-1"> 
 		<!-- Footer logo -->
