--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4,6 +4,8 @@
   <body>
     
 	<%- include('../partials/nav.ejs') %>   
+
+
 	<% try { %>
 <div class="container-fluid" id="header">
 
@@ -12,7 +14,7 @@
 	  <div class="container" id="hero">
 	  	<div class="row justify-content-end">
 	  		<div class="col-lg-6 hero-img-container">
-	  			<a href="./single">
+					<a  href="./single/<%= publicBlogs[0]['blog_id'] %>">
 	  			<div class="hero-img">
 	  				<img src="./img/hero-img.png">
 	  			</div>
@@ -74,20 +76,20 @@
 		<div class="alert alert-warning" role="alert">
 		 No public blogs available at the moment.
 	  </div>
-
-<% } %>
-<!-- More articles button -->
-
-<div class="container text-center pb-3 mb-5">
-		<a href="#" class="btn btn-lg btn-light">More Articles</a>
+	</div>
 </div>
+<% } %>
+
+
+
 
 
 <!-- Footer section  -->
 
 <%- include('../partials/footer.ejs') %> 
-
-
-   
   </body>
 </html>
+
+
+
+
