--- a/views/partials/member.ejs
+++ b/views/partials/member.ejs
@@ -10,14 +10,14 @@
     
                   <ul class="navbar-nav">
                       <li class="nav-item">
-                      <a class="nav-link" href="#">Travel Tips</a>
+                      <a class="nav-link" href="/">public blogs</a>
                     </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Get Inspired</a>
+                    <a class="nav-link" href="/main">Member blogs</a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Cheap Airfare</a>
+                    <a class="nav-link" href="#"></a>
                   </li>
 
                   <li class="nav-item">
